forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    port: 22
    targetPort: 22
  selector:
    app: forgejo
  type: ClusterIP
