forgejo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-ingress
  namespace: forgejo
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: git.example.com
    http:
      paths:
      - backend:
          service:
            name: forgejo
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - git.example.com
