forgejo/ssh-tcp-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRouteTCP","metadata":{"annotations":{},"name":"forgejo-ssh","namespace":"forgejo"},"spec":{"entryPoints":["ssh"],"routes":[{"match":"HostSNI(`*`)","services":[{"name":"forgejo","port":22}]}]}}
  generation: 1
  name: forgejo-ssh
  namespace: forgejo
spec:
  entryPoints:
  - ssh
  routes:
  - match: HostSNI(`*`)
    services:
    - name: forgejo
      port: 22
